# LMMS-Sporth

./: CMakeLists.txt  README.md  ReverbSC.cpp  Sporth.cpp  Sporth.h  SporthControlDialog.cpp  SporthControlDialog.h  SporthControls.cpp  SporthControls.h
cmake/modules/: BuildPlugin.cmake
examples/: sporthlings.mmpz
